--- a/packages/application/public/index.html
+++ b/packages/application/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Garage</title>
+    <title>PictureExchanger</title>
 </head>
     <body>
         <div id='mount-point'>
